<resources>
    <string name="app_name">BosBeras</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sp">project.shared.preference</string>
    <string name="login_method_key">LoginKey</string>
    <string name="id">id</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="email_verified_at">email_verified_at</string>
    <string name="phone">phone</string>
    <string name="profile">profile</string>
    <string name="gender">gender</string>
    <string name="birth">birth</string>
    <string name="type">type</string>
    <string name="role_id">role_id</string>
    <string name="baranch">baranch</string>
    <string name="token">token</string>
    <string name="default_value"> </string>
    <string name="voucher_diskon">Voucher Diskon</string>
    <string name="komisi_ajak_teman">Komisi Ajak Teman</string>
    <string name="daftar_alamat">Daftar Alamat</string>
    <string name="pesanan_saya">Pesanan Saya</string>
    <string name="profil">Profil</string>
    <string name="customer_service">Customer Service</string>
</resources>